# tamise-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  tree.txt
alembic/: env.py
alembic/versions/: 3995692bfb85_create_tables_backend.py  7e5b74f35fab_creat_users_table.py  91ce173d2a5a_updated_nullable_drink_id.py  e2a3ab1aee13_updated_dish_model.py
app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: auth.py  order.py  user.py
tamise/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
tamise/routers/: auth.py  contact.py  dish.py  menu.py  order.py  user.py
tamise/services/: auth.py  contact.py  dish.py  drink.py  menu.py  order.py  user.py
