[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Tamise"
version = "0.9.0"
description = "backend_restaurant_tamise"
authors = ["Yacine BENANNOUNE <ybenannoune@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.15"
bcrypt = "^4.0.1"
fastapi = "^0.95.2"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.8"}
psycopg2 = "^2.9.6"
passlib = "^1.7.4"

[tool.poetry.scripts]
app = "tamise.main:run_app"